--- a/features/customization/app-icons.mdx
+++ b/features/customization/app-icons.mdx
@@ -18,8 +18,9 @@ For the best results across all devices, prepare the following images:
 | App Icon | 1024×1024 | The primary app icon, will be resized for various platforms |
 | iOS Icon (Light Mode) | 1024×1024 | Optional icon variant for iOS light mode |
 | iOS Icon (Dark Mode) | 1024×1024 | Optional icon variant for iOS dark mode |
+| iOS Icon (Tinted) | 1024×1024 | Optional icon variant for iOS tinted mode |
 | Adaptive Icon Foreground | 1024×1024 | Android foreground layer (should have transparent background) |
-| Adaptive Icon Monochrome | 1024×1024 | Android monochrome version (single color with transparency) |
+| Adaptive Icon Monochrome | 1024×1024 | Android monochrome version (black color with transparent background) |
 
 ### Splash Screens
 
