--- a/introduction/what-is-buildwithai.mdx
+++ b/introduction/what-is-buildwithai.mdx
@@ -31,12 +31,11 @@ The BuildWithAI+ boilerplate was created with several key principles in mind:
 Building a mobile app from scratch involves dozens of repetitive setup tasks:
 
 - Setting up authentication flows
+- Setting up in-app purchases
 - Configuring push notifications
-- Implementing navigation patterns
 - Establishing styling systems
 - Adding analytics tracking
-- Setting up in-app purchases
-- Configuring build pipelines
+- And more...
 
 BuildWithAI+ handles all these common requirements for you, allowing you to focus on the unique features that make your app stand out.
 
