--- a/features/auth/apple-auth.mdx
+++ b/features/auth/apple-auth.mdx
@@ -20,107 +20,192 @@ Before setting up Apple Sign-In, make sure you have:
 <Steps>
   <Step title="Create an App ID in the Apple Developer Portal">
     1. Go to the [Apple Developer Portal](https://developer.apple.com/account/)
-    2. Navigate to "Certificates, IDs & Profiles"
-    3. Click on "Identifiers" in the sidebar
-    4. Click the "+" button to create a new identifier
-    5. Select "App IDs" and click "Continue"
-    6. Choose "App" as the type and click "Continue"
+    2. Navigate to `Certificates, IDs & Profiles`
+    3. Click on `Identifiers` in the left sidebar
+    4. Click the `+` button to create a new identifier
+    5. Select `App IDs` and click `Continue`
+    6. Choose `App` as the type and click `Continue`
     7. Fill in a description (e.g., "My App") 
-    8. Enter your Bundle Identifier that matches your app.json (e.g., `com.yourcompany.yourapp`)
-    9. Scroll down to "Capabilities" and enable "Sign In with Apple"
-    10. Click "Continue" then "Register"
+    8. Enter your `Bundle Identifier` that matches your `app.json` (e.g., `com.yourcompany.yourapp`)
+    9. Scroll down to `Capabilities` and enable `Sign In with Apple`
+    10. Click `Continue` then `Register` on the top right
   </Step>
 
   <Step title="Create a Service ID">
-    1. In the Apple Developer Portal, go to "Certificates, IDs & Profiles"
-    2. Click on "Identifiers" in the sidebar
-    3. Click the "+" button to create a new identifier
-    4. Select "Service IDs" and click "Continue"
-    5. Fill in a description (e.g., "My App Web Auth Service")
-    6. Enter a unique identifier (e.g., `com.yourcompany.yourapp.service`)
-    7. Click "Continue" then "Register"
+    1. In the Apple Developer Portal, go to `Certificates, IDs & Profiles`
+    2. Click on `Identifiers` in the left sidebar
+    3. Click the `+` button to create a new identifier
+    4. Select `Service IDs` and click `Continue`
+    5. Fill in a description (e.g., "My App - Apple Sign In")
+    6. Enter a unique identifier, which could be your app ID with `.signin` appended (e.g. `com.yourcompany.yourapp.signin`)
+    7. Click `Continue` then `Register` on the top right
     
     After registration:
     
     8. Click on your newly created Service ID from the list
-    9. Check "Sign In with Apple" and click "Configure"
+    9. Check `Sign In with Apple` and click `Configure`
     10. Add your Supabase domain as a Website URL (e.g., `https://your-project-ref.supabase.co`)
     11. Add your return URL (e.g., `https://your-project-ref.supabase.co/auth/v1/callback`)
-    12. Click "Save", then "Continue", and "Save" again
+    12. Click `Save`, then `Continue`, and `Save` again
   </Step>
 
   <Step title="Create a Private Key">
-    1. In the Apple Developer Portal, go to "Certificates, IDs & Profiles"
-    2. Click on "Keys" in the sidebar
-    3. Click the "+" button to create a new key
+    1. In the Apple Developer Portal, go to `Certificates, IDs & Profiles`
+    2. Click on `Keys` in the sidebar
+    3. Click the `+` button to create a new key
     4. Enter a name for your key (e.g., "My App Sign In Key")
-    5. Check "Sign In with Apple" and click "Configure"
-    6. Select your primary App ID and click "Save"
-    7. Click "Continue" then "Register"
-    8. **Download your private key** file (.p8) - this can only be downloaded once
-    9. Note your "Key ID" for later use
-  </Step>
-
-  <Step title="Configure Supabase Auth Provider">
-    1. In your Supabase dashboard, go to "Authentication" > "Providers"
-    2. Find "Apple" in the list of providers and click "Enable"
-    3. Fill in the required fields:
-       - **Service ID**: The Service ID you created (e.g., `com.yourcompany.yourapp.service`)
-       - **Team ID**: Your Apple Developer Team ID (found in the Developer Portal under "Membership")
-       - **Key ID**: The ID of the private key you created
-       - **Private Key**: The content of the .p8 file you downloaded (open it in a text editor)
-    4. Click "Save"
+    5. Check `Sign In with Apple` and click `Configure`
+    6. Select your primary App ID (e.g., `com.yourcompany.yourapp`) and click `Save`
+    7. Click `Continue` then `Register`
+    8. **Download** your private key file (a file with `.p8` at the end) - this can **only** be downloaded once
+    9. Note your `Key ID` for later use
   </Step>
 </Steps>
 
-## Using Apple Sign-In in Your App
+## Generate a client_secret
 
-The BuildWithAI+ boilerplate includes ready-to-use Apple Sign-In functionality. Once you've completed the setup above, the Apple Sign-In button in the authentication screens will work automatically.
+The secret key you downloaded is used to create the client_secret string you'll need to authenticate your users.
+
+According to the Apple Docs it needs to be a JWT token encrypted using the Elliptic Curve Digital Signature Algorithm (ECDSA) with the P-256 curve and the SHA-256 hash algorithm.
+
+```js
+#!/usr/bin/env node
+/**
+ * gen_apple_secret.js
+ * Simple "Sign in with Apple" client_secret generator
+ * Usage: node gen_apple_secret.js
+ */
+
+// 👉 FILL THESE IN:
+const TEAM_ID   = "YOUR_TEAM_ID";             // e.g. 1A2B3C4D5E
+const CLIENT_ID = "com.example.service";      // your Service ID
+const KEY_ID    = "YOUR_KEY_ID";              // the 10-char Key ID
+const KEY_FILE  = "./AuthKey_XXXXXXXXXX.p8";  // path to your .p8 file
+
+import fs from "fs";
+import jwt from "jsonwebtoken";
+
+// Read your private key
+const privateKey = fs.readFileSync(KEY_FILE, "utf8");
+
+// Build timestamps
+const now = Math.floor(Date.now() / 1000);
+const exp = now + 180 * 24 * 3600; // 180 days
+
+// Sign the JWT
+const token = jwt.sign(
+  {
+    iss: TEAM_ID,
+    iat: now,
+    exp,
+    aud: "https://appleid.apple.com",
+    sub: CLIENT_ID
+  },
+  privateKey,
+  {
+    algorithm: "ES256",
+    keyid: KEY_ID
+  }
+);
+
+// Output to console
+console.log("\n🔑 Your client_secret JWT:\n");
+console.log(token);
+console.log();
+```
+
+### Quick Steps
+
+1. Drop `gen_apple_secret.js` and your `AuthKey_XXXXXXXXXX.p8` into your Expo project root.
+
+2. Install `jsonwebtoken`:
+
+```bash
+npm install jsonwebtoken
+```
+
+3. Edit the four const lines at the top of `gen_apple_secret.js`:
+   - `TEAM_ID`: Your Apple Developer Team ID
+   - `CLIENT_ID`: The Service ID you created (e.g. `com.yourcompany.yourapp.signin`)
+   - `KEY_ID`: The Key ID of the private key you downloaded
+   - `KEY_FILE`: The path to your downloaded .p8 file
+
+4. Run the script:
+
+```bash
+node gen_apple_secret.js
+```
+
+5. Copy the printed JWT and use it in the Supabase setup in the next step.
+
+<Steps>
+  <Step title="Configure Supabase Auth Provider">
+    1. In your Supabase dashboard, go to `Authentication` > `Sign In / Providers` in the left sidebar
+    2. Find `Apple` in the list of Auth Providers and click it to open the settings
+    3. Toggle `Enable Sign in with Apple`
+    4. Fill in the required fields:
+       - **Client IDs**: The Service ID you created (e.g., `com.yourcompany.yourapp.signin`)
+       - **Secret Key (for OAuth)**: Paste the generated client secret JWT from the previous step
+    5. Click `Save`
+  </Step>
+</Steps>
+
+
+
+## Enabling Apple Sign-In in Your App
+
+Now that you've set up Apple Sign-In with Supabase, you need to enable the feature in your app codebase:
+
+<Steps>
+  <Step title="Enable the Feature in Your Codebase">
+    1. Rename the example file by running:
+    ```bash
+    mv lib/auth/methods/apple-auth.ts.example lib/auth/methods/apple-auth.ts
+    ```
+    2. Install the required dependency:
+    ```bash
+    npx expo install expo-apple-authentication
+    ```
+    3. Update your `app.json` to add Apple Sign-In configuration:
+    ```json
+    {
+      "expo": {
+        "ios": {
+          // Add this to the iOS section
+          "usesAppleSignIn": true
+        },
+        "plugins": [
+          // Add this to the plugins array
+          "expo-apple-authentication"
+        ]
+      }
+    }
+    ```
+  </Step>
+
+  <Step title="Uncomment Feature Code">
+    The boilerplate already includes all necessary code for Apple Sign-In, but it's commented out by default.
+    Uncomment all code blocks marked with `TODO: APPLE SIGN-IN` in these files:
+    - `lib/auth/context.tsx`
+    - `app/welcome.tsx`
+    - `app/login.tsx`
+    - `app/register.tsx`
+    
+    Each file contains clear TODO comments marking the sections to uncomment.
+  </Step>
+</Steps>
+
+Once you've completed these steps, the Apple Sign-In button will appear in the authentication screens and be fully functional - on iOS only.
 
 ### Testing Your Configuration
 
 To test your Apple Sign-In configuration:
 
-1. Build and run your app using a development build (Apple Sign-In doesn't work in Expo Go)
+1. Rebuild and run your app using a development build (Apple Sign-In doesn't work in Expo Go)
 2. Navigate to the sign-in screen
 3. Tap the "Sign in with Apple" button
 4. Complete the Apple authentication flow
 5. Verify that you are successfully signed in to your app
-
-### Troubleshooting
-
-If you encounter issues with Apple Sign-In:
-
-<AccordionGroup>
-  <Accordion title="Sign-in button doesn't work">
-    - Make sure you're testing in a development build, not Expo Go
-    - Check your app's logs for any error messages
-    - Verify the button isn't disabled due to platform restrictions
-  </Accordion>
-  
-  <Accordion title="Authentication fails">
-    - Verify that all credentials in Supabase are correctly configured
-    - Ensure your Bundle ID matches the one in your App ID in the Apple Developer Portal
-    - Check that your Service ID is properly configured with the correct URLs
-  </Accordion>
-  
-  <Accordion title="Issues with Android">
-    - Apple Sign-In is primarily for iOS users. On Android, consider providing alternative sign-in methods
-    - The boilerplate includes a web-based fallback for Android devices, but iOS native experience will be better
-  </Accordion>
-  
-  <Accordion title="Redirect issues">
-    - Verify that your Supabase project URL is correctly added as a return URL in the Apple Developer Portal
-    - Make sure the callback URL format is correct (`https://your-project-ref.supabase.co/auth/v1/callback`)
-  </Accordion>
-</AccordionGroup>
-
-### Development vs. Production
-
-Apple Sign-In has different behaviors in development and production environments:
-
-- **Development**: When testing, you might be asked to sign in repeatedly as testing tokens expire quickly
-- **Production**: In production, sign-ins persist longer and the user experience is smoother
 
 ## Additional Resources
 
