--- a/features/push/setup.mdx
+++ b/features/push/setup.mdx
@@ -3,6 +3,10 @@ title: "Push Notifications Setup"
 description: "Configure push notifications for your BuildWithAI+ app on iOS and Android"
 ---
 
+import { Tabs, Tab } from 'nextra/components'
+import { Steps, Step } from 'nextra/components'
+import { Tip, Info, Note } from 'nextra/components'
+
 # Push Notifications Setup
 
 The BuildWithAI+ boilerplate includes a comprehensive push notification system powered by Expo's notification services. This guide will walk you through the setup process for both iOS and Android platforms.
@@ -30,14 +34,14 @@ Before you begin, you'll need:
 The boilerplate provides a hook for managing push tokens:
 
 ```jsx
-// src/hooks/usePushNotifications.ts
+// src/hooks/useNotifications.ts
 import { useEffect } from 'react';
 import * as Notifications from 'expo-notifications';
 import * as Device from 'expo-device';
 import { Platform } from 'react-native';
 import { supabase } from '@/lib/supabase';
 
-export function usePushNotifications(userId: string | null) {
+export function useNotifications(userId: string | null) {
   useEffect(() => {
     registerForPushNotifications(userId);
   }, [userId]);
@@ -48,261 +52,119 @@ export function usePushNotifications(userId: string | null) {
 
 Make sure your app's backend API is set up to receive and store these tokens. The boilerplate uses Supabase to store device tokens.
 
-## Step 2: iOS Setup (APNs)
+## Step 2: Platform-Specific Setup
 
-### Step 2.1: Generate Authentication Keys
+<Tabs>
+  <Tab title="iOS Setup (APNs)">
+    <Note>
+      The easiest way to set up iOS push notifications is during your initial development build process as described in the [Development Build Guide](/quickstart/development-build.mdx).
+    </Note>
 
-1. Go to the [Apple Developer Portal](https://developer.apple.com/)
-2. Navigate to "Certificates, Identifiers & Profiles" > "Keys"
-3. Click the "+" button to add a new key
-4. Name your key (e.g., "BuildWithAI Push Key")
-5. Select "Apple Push Notifications service (APNs)" checkbox
-6. Register the key and download the `.p8` file (keep it safe, you can only download it once)
+    <Info>
+      A paid Apple Developer Account is required for iOS push notifications.
+    </Info>
 
-### Step 2.2: Configure Expo Push Credentials
+    <Steps>
+      <Step title="Adding Push Notifications After Initial Build">
+        <Tip>
+          If you skipped push notification setup during your initial development build or answered "no" to the prompts, follow these instructions to add push notification support later.
+        </Tip>
 
-1. Log in to your [Expo dashboard](https://expo.dev)
-2. Select your project
-3. Go to "Credentials" > "iOS Push Notifications"
-4. Upload your `.p8` key file
-5. Enter your Apple Team ID and Key ID
-
-<Frame>
-  <img src="/images/expo-push-credentials.png" alt="Expo Push Credentials" />
-</Frame>
-
-### Step 2.3: Update app.json
-
-Ensure your app.json has the proper configuration:
-
-```json
-{
-  "expo": {
-    "ios": {
-      "bundleIdentifier": "com.yourcompany.yourappname",
-      "buildNumber": "1.0.0"
-    }
-  }
-}
-```
-
-## Step 3: Android Setup (FCM)
-
-### Step 3.1: Create a Firebase Project
-
-1. Go to the [Firebase Console](https://console.firebase.google.com/)
-2. Create a new project (or use an existing one)
-3. Add an Android app to your Firebase project
-   - Use the same package name as in your app.json
-   - Download the google-services.json file
-
-### Step 3.2: Upload FCM Credentials to Expo
-
-1. Go to your [Expo dashboard](https://expo.dev)
-2. Select your project
-3. Navigate to "Credentials" > "Android Push Notifications"
-4. Upload the FCM API key or use the Firebase Service Account
-
-### Step 3.3: Update app.json
-
-```json
-{
-  "expo": {
-    "android": {
-      "package": "com.yourcompany.yourappname",
-      "versionCode": 1,
-      "googleServicesFile": "./google-services.json"
-    }
-  }
-}
-```
-
-## Step 4: Configure Notification Handling
-
-The boilerplate includes a notification handler that you can customize. The main configuration is in `src/lib/notifications.ts`:
-
-```typescript
-import * as Notifications from 'expo-notifications';
-
-// Configure how notifications are displayed while app is in foreground
-Notifications.setNotificationHandler({
-  handleNotification: async () => ({
-    shouldShowAlert: true,
-    shouldPlaySound: true,
-    shouldSetBadge: true,
-  }),
-});
-
-// Additional configuration...
-```
-
-## Step 5: Test Push Notifications
-
-### Using Expo's Push API (Development)
-
-For development purposes, you can send test notifications using the Expo push API:
-
-```typescript
-const sendTestNotification = async (expoPushToken: string) => {
-  await fetch('https://exp.host/--/api/v2/push/send', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      to: expoPushToken,
-      title: 'Test Notification',
-      body: 'This is a test notification',
-      data: { screen: 'Home' },
-    }),
-  });
-};
-```
-
-### Using Firebase Cloud Messaging (Production)
-
-For production, you should set up your own backend to send notifications using FCM:
-
-```javascript
-// Example server code (Node.js)
-const { initializeApp, cert } = require('firebase-admin/app');
-const { getMessaging } = require('firebase-admin/messaging');
-
-initializeApp({
-  credential: cert(require('./service-account.json'))
-});
-
-const message = {
-  notification: {
-    title: 'New Message',
-    body: 'You have a new message',
-  },
-  data: {
-    screen: 'Chat',
-    id: '123456',
-  },
-  token: 'USER_DEVICE_TOKEN',
-};
-
-getMessaging().send(message)
-  .then((response) => {
-    console.log('Successfully sent message:', response);
-  })
-  .catch((error) => {
-    console.log('Error sending message:', error);
-  });
-```
-
-## Step 6: Handle Notification Interactions
-
-When users tap on a notification, you can navigate them to the relevant screen:
-
-```typescript
-// src/lib/notifications.ts
-Notifications.addNotificationResponseReceivedListener((response) => {
-  const data = response.notification.request.content.data;
+        1. **Run the EAS credentials command:**
+           ```sh
+           eas credentials --platform ios
+           ```
+           - Choose `Push Notifications: Manage your Apple Push Notifications Key`.
+           - Follow the prompts to add or generate a new push notification key for your project.
+      </Step>
+    </Steps>
+  </Tab>
   
-  // Navigate to the appropriate screen based on notification data
-  if (data.screen) {
-    router.push(data.screen as any);
-  }
-});
+  <Tab title="Android Setup (FCM)">
+
+    **Documentation references:**
+    - [Expo Push Notifications Setup](https://docs.expo.dev/push-notifications/push-notifications-setup/)
+    - [FCM Credentials Guide](https://docs.expo.dev/push-notifications/fcm-credentials/)
+
+    <Steps>
+      <Step title="Create a Firebase Project">
+        1. Go to the [Firebase Console](https://console.firebase.google.com/)
+        2. Click "Add project" (or use an existing project for your app)
+        3. Follow the prompts to create and configure your project
+      </Step>
+
+      <Step title="Generate Service Account Key">
+        1. In the Firebase console, open Project settings > Service accounts
+        2. Click "Generate New Private Key", then confirm by clicking "Generate Key"
+        3. Securely store the downloaded JSON file containing the private key
+      </Step>
+
+      <Step title="Upload Service Account Key to EAS">
+        **Using EAS Dashboard**
+        1. Go to your [Expo project dashboard](https://expo.dev/accounts/[account]/projects/[project])
+        2. Pick your account and project
+        3. Scroll down to **Credentials** under **Project settings** in the menu on the left
+        4. Under **Android**, find your **Android Application Identifier** - your package name from `app.json`
+        5. Click on it
+        6. Under **Service Credentials > FCM V1 service account key**, click **Add a service account key**
+        7. Under **Upload new key**, upload your JSON credential file and click **Save**
+
+        > **Note:** Copy your **SHA-1 fingerprint** from the **Android upload keystore** table
+      </Step>
+
+      <Step title="Add Android App to Firebase and Configure google-services.json">
+        1. In the Firebase Console, go to your project and click **Add app** and select **Android**
+           - Enter your Android package name (found in your `app.json`)
+           - For the App nickname, you can use your app name
+           - Paste your **SHA-1 fingerprint** from the **Android upload keystore** table from the last step
+           - Register the app and download the `google-services.json` file
+      </Step>
+
+      <Step title="Set up the downloaded file in your project">
+        1. **Save the `google-services.json` file**
+           - Put it in your project's main folder (where your `package.json` or `app.json` files are)
+
+        2. **Tell Expo where to find the file by adding this to your `app.json`:**
+           ```json
+           {
+             "expo": {
+               "android": {
+                 "package": "com.yourcompany.yourappname",
+                 "versionCode": 1,
+                 "googleServicesFile": "./google-services.json"
+               }
+             }
+           }
+           ```
+
+        > **Note:** This is a sensitive file that should not be tracked by git. But, EAS needs it to build the app. So:
+        > - Make sure it is added to the `.gitignore` file
+        > - But not in the `.easignore` file
+
+        > **Note:** Just skip the rest of the flow in Firebase (*Add Firebase SDK* and *Next steps*)
+      </Step>
+    </Steps>
+  </Tab>
+</Tabs>
+
+## Step 3: Rebuild Your App
+
+After setting up push notification credentials for either platform, you need to create a new development build with these credentials:
+
+```bash
+eas build --profile development --platform [ios|android|all]
 ```
 
-## Advanced Configuration
+Once the build is complete, install it on your device to test the push notification functionality.
 
-### Notification Categories and Actions
+## Step 4: Test Push Notifications
 
-You can set up notification categories to enable interactive notifications:
+<Info>
+  Your app includes a built-in demo screen for testing push notifications.  
+</Info>
 
-```typescript
-Notifications.setNotificationCategoryAsync('message', [
-  {
-    identifier: 'reply',
-    buttonTitle: 'Reply',
-    options: {
-      isDestructive: false,
-      isAuthenticationRequired: false,
-    },
-  },
-]);
-```
-
-### Notification Channels (Android)
-
-For Android, you can create notification channels to categorize notifications:
-
-```typescript
-if (Platform.OS === 'android') {
-  Notifications.setNotificationChannelAsync('default', {
-    name: 'Default',
-    importance: Notifications.AndroidImportance.MAX,
-    vibrationPattern: [0, 250, 250, 250],
-    lightColor: '#FF231F7C',
-  });
-  
-  Notifications.setNotificationChannelAsync('messages', {
-    name: 'Messages',
-    importance: Notifications.AndroidImportance.HIGH,
-    sound: 'notification.wav',
-  });
-}
-```
-
-### Scheduling Local Notifications
-
-The boilerplate also includes functionality for scheduling local notifications:
-
-```typescript
-const scheduleLocalNotification = async () => {
-  await Notifications.scheduleNotificationAsync({
-    content: {
-      title: "Reminder",
-      body: "Don't forget to complete your profile!",
-      data: { screen: 'Profile' },
-    },
-    trigger: {
-      seconds: 60 * 60, // 1 hour from now
-    },
-  });
-};
-```
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion icon="mobile-screen" title="Notifications not showing on iOS">
-    **Possible solutions:**
-    
-    1. Verify that you've enabled push notification capabilities in Xcode
-    2. Check that the user has granted permission for notifications
-    3. Ensure your APNs key is correctly uploaded to Expo
-    4. For development builds, make sure you're using a real device (simulator doesn't support push notifications)
-  </Accordion>
-  
-  <Accordion icon="android" title="Notifications not showing on Android">
-    **Possible solutions:**
-    
-    1. Verify that your FCM configuration is correct
-    2. Check that google-services.json is in the correct location
-    3. Ensure the app has notification permissions
-    4. Check if the notification channel is properly configured
-  </Accordion>
-  
-  <Accordion icon="key" title="Expo push token not generating">
-    **Possible solutions:**
-    
-    1. Make sure you're using a physical device, not an emulator
-    2. Check your internet connection
-    3. Verify the app has the correct permissions
-    4. For development builds, ensure you have the proper credentials set up
-  </Accordion>
-</AccordionGroup>
-
-## Next Steps
-
-- Learn how to [Test Push Notifications](/features/push/testing)
-- Implement custom notification handling for different notification types
-- Set up server-side code to send notifications at scale
-
-By following this guide, you should have a fully functional push notification system in your BuildWithAI+ app. Push notifications are a powerful way to engage your users and keep them coming back to your app.
+1. Open your development build
+2. Navigate to the `Account` tab
+3. Select `Notifications` settings
+4. Tap on `Test Push Notifications`
+5. Follow the on-screen instructions to send and receive test notifications
